include/vision/vision_ui_item.h

typedef struct vision_ui_notification_t {
    const char* content;
    uint16_t span;
    float y_notification;
    float y_notification_trg;
    float w_notification;
    float w_notification_trg;
    bool is_running;
    uint32_t time_start;
    uint32_t time;
    bool is_dismissing;
    uint32_t dismiss_start;
    const char* pending_content;
    uint16_t pending_span;
    bool has_pending;
} vision_ui_notification_t;
typedef struct vision_ui_alert_t {
    const char* content;
    uint16_t span;
    float y_alert;
    float y_alert_trg;
    float w_alert;
    float w_alert_trg;
    bool is_running;
    uint32_t time_start;
    uint32_t time;
} vision_ui_alert_t;
typedef enum {
    ListItem,
    TitleItem,
    IconItem,
    SwitchItem,
    SliderItem,
    UserItem,
} vision_ui_list_item_type_t;
typedef struct vision_ui_list_item_t {
    vision_ui_list_item_type_t type;
    bool icon_view_mode;
    const char* content;
    uint32_t text_scroll_anchor;
    float scroll_bar_top;
    float scroll_bar_top_velocity;
    float scroll_bar_top_trg;
    float scroll_bar_height;
    float scroll_bar_height_velocity;
    float scroll_bar_height_trg;
    float scroll_bar_scale_part;
    float scroll_bar_scale_part_trg;
    int16_t scroll_bar_top_px;
    int16_t scroll_bar_height_px;
    float y_list_item;
    float y_list_item_trg;
    float icon_scroll_offset;
    float icon_scroll_offset_velocity;
    float icon_scroll_offset_trg;
    uint8_t layer;
    uint8_t child_num;
    size_t capacity;
    struct vision_ui_list_item_t** child_list_item;
    struct vision_ui_list_item_t* parent;
} vision_ui_list_item_t;
typedef struct vision_ui_switch_item_t {
    vision_ui_list_item_t base_item;
    bool value;
    void (*on_changed)(bool value);
} vision_ui_switch_item_t;
typedef struct vision_ui_slider_item_t {
    vision_ui_list_item_t base_item;
    int16_t value;
    bool is_confirmed;
    uint8_t value_step;
    int16_t value_max;
    int16_t value_min;
    uint32_t text_scroll_anchor;
    void (*on_changed)(int16_t value);
} vision_ui_slider_item_t;
typedef struct vision_ui_icon_item_t {
    vision_ui_list_item_t base_item;
    float title_y;
    float title_y_velocity;
    float title_y_trg;
    const uint8_t* icon; 
    const char* description; 
    uint32_t description_scroll_anchor;
} vision_ui_icon_item_t;
typedef struct vision_ui_user_item_t {
    vision_ui_list_item_t base_item;
    bool in_user_item;
    bool entering_user_item;
    bool exiting_user_item;
    void (*init_function)();
    void (*loop_function)(); 
    void (*exit_function)();
    bool user_item_inited;
    bool user_item_looping;
} vision_ui_user_item_t;
typedef enum { VisionAllocMalloc, VisionAllocCalloc, VisionAllocFree } vision_alloc_op_t;
extern void vision_ui_allocator_set(void* (*allocator)(vision_alloc_op_t op, size_t size, size_t count, void* ptr));
extern void vision_ui_font_set(vision_ui_font_t font);
extern void vision_ui_font_set_title(vision_ui_font_t font);
extern void vision_ui_font_set_subtitle(vision_ui_font_t font);
extern vision_ui_font_t vision_ui_font_get();
extern vision_ui_font_t vision_ui_font_get_title();
extern vision_ui_font_t vision_ui_font_get_subtitle();
extern const vision_ui_notification_t* vision_ui_notification_instance_get();
extern vision_ui_notification_t* vision_ui_notification_mutable_instance_get();
extern void vision_ui_notification_push(const char* content, uint16_t span);
extern const vision_ui_alert_t* vision_ui_alert_instance_get();
extern vision_ui_alert_t* vision_ui_alert_mutable_instance_get();
extern void vision_ui_alert_push(const char* content, uint16_t span);
extern vision_ui_switch_item_t* vision_ui_to_list_switch_item(vision_ui_list_item_t* list_item);
extern vision_ui_slider_item_t* vision_ui_to_list_slider_item(vision_ui_list_item_t* list_item);
extern vision_ui_icon_item_t* vision_ui_to_list_icon_item(vision_ui_list_item_t* list_item);
extern vision_ui_user_item_t* vision_ui_to_list_user_item(vision_ui_list_item_t* list_item);
extern vision_ui_list_item_t* vision_ui_list_item_new(size_t capacity, bool icon_mode, const char* content);
extern vision_ui_list_item_t* vision_ui_list_title_item_new(const char* title);
extern vision_ui_list_item_t* vision_ui_list_icon_item_new(
        size_t capacity,
        const uint8_t* icon,
        const char* title,
        const char* description
);
extern vision_ui_list_item_t* vision_ui_list_switch_item_new(
        const char* content,
        bool default_value,
        void (*on_changed)(bool value)
);
extern vision_ui_list_item_t* vision_ui_list_slider_item_new(
        const char* content,
        int16_t default_value,
        uint8_t step,
        int16_t min,
        int16_t max,
        void (*on_changed)(int16_t value)
);
extern vision_ui_list_item_t* vision_ui_list_user_item_new(
        const char* content,
        void (*init_function)(),
        void (*loop_function)(),
        void (*exit_function)()
);
extern bool vision_ui_root_item_set(vision_ui_list_item_t* item);
extern vision_ui_list_item_t* vision_ui_root_list_get();
extern bool vision_ui_list_push_item(vision_ui_list_item_t* parent, vision_ui_list_item_t* child);