bindings/rust/native/include/vision/vision_ui_core.h

typedef enum vision_ui_core_init_result_t {
    VisionUiCoreInitOk = 0,
    VisionUiCoreInitRootItemNotSet,
} vision_ui_core_init_result_t;
extern void vision_ui_render_init(vision_ui_t* ui);
extern vision_ui_core_init_result_t vision_ui_core_init(vision_ui_t* ui);
extern void vision_ui_start_logo_set(vision_ui_t* ui, const uint8_t* bmp, uint32_t span);
extern void vision_ui_step_render(vision_ui_t* ui);
extern bool vision_ui_is_exited(const vision_ui_t* ui);
extern bool vision_ui_is_background_frozen(const vision_ui_t* ui);
extern void vision_ui_minifont_set(vision_ui_t* ui, vision_ui_font_t font);
extern vision_ui_font_t vision_ui_minifont_get(const vision_ui_t* ui);